# scRNA-seq-pipeline

./: .gitignore  LICENSE  README.MD  environment.yml  pyproject.toml  requirements.txt
examples/: 01_basic_pipeline_with_annotation.ipynb  0_build_h5ad.ipynb  Bastidas-Ponce_Development_2019.ipynb  Chen_NatureCellBiol_2021.ipynb  Melms_Nature_2021.ipynb
scrna_pipeline/: __init__.py  annotation.py  batch_correction.py  clustering.py  h5ad_builders.py  pipeline.py  preprocessing.py
