[project]
name = "scrna-pipeline"
version = "0.1.0"
description = "A clean, modular scRNA-seq preprocessing and analysis pipeline"
authors = [
    { name = "Irfan Alahi" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "scanpy>=1.11.5",
    "anndata>=0.11.4",
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.11",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "umap-learn>=0.5",
    "h5py>=3.0",
    "numba>=0.58",
    "pynndescent>=0.5",
    "statsmodels>=0.14",
    "leidenalg>=0.11",
    "louvain>=0.8",
]

# pip-only extras
[project.optional-dependencies]
pip_extras = [
    "scrublet==0.2.3",
    "harmonypy==0.0.10",
    "igraph==0.11.9",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["scrna_pipeline"]
